<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dusty"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabSelectedTextColor="@color/green"
            app:tabTextColor="@color/dusty"
            app:tabIconTint="@color/tab_icon_color"
            app:tabIndicatorColor="@color/dusty"
            app:tabBackground="@color/tab_background_color">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmPrincipal"
                android:icon="@drawable/baseline_home_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_principal" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmGaleria"
                android:icon="@drawable/baseline_music_note_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_galeria" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmContacto"
                android:icon="@drawable/baseline_mail_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_contacto" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpVisor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>